--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "next": "14.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-loading": "^2.0.3"
+    "react-loading": "^2.0.3",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
