--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "framer-motion": "^12.6.3",
     "next": "14.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
